2017-02-01 0.8.3 alpha
Make packaging qmidiplayer less painful.
Add mime info.
Do not throw integers.
Fix incorrect font paths in Arch Linux.

2017-01-15 0.8.3 alpha
A little code refactoring.

2017-01-02 0.8.3 alpha
Can show measure indicators now.
Added new options to specify custom fonts.
Added a new handler API.
Minor rework on handler calling.

2016-12-27 0.8.3 alpha
First official version with experimental support for
the visualization plugin on Windows. Fixed several
critical bugs causing the plugin to crash QMP.

2016-12-11 0.8.3 alpha
Update the preset selection dialog to improve support
for external MIDI devices.

2016-09-23 0.8.3 alpha
Add a set of icons for dark themes and a option to
change the icon theme.

2016-09-16 0.8.3 alpha
Minor bug fix. Update documentation.

2016-09-15 0.8.3 alpha
Add a new visualization mode. Fix minor behavioral bugs.

2016-09-15 0.8.2 alpha
Fix FTBFS. Force Qt5 while building.

2016-06-05 0.8.2 alpha
Make preset selection dialog non-modal.

2016-06-03 0.8.2 alpha
Add the "restart fluidsynth" action.

2016-06-02 0.8.2 alpha
Add option to change note colors.

2016-06-01 0.8.2 alpha
Initial event modifier and event filter stub.

2016-05-31 0.8.2 alpha
Update documentation.

2016-05-30 0.8.2 alpha
Added an option to change font size used by the visualization.

2016-05-29 0.8.2 alpha
Allow disabling soundfonts in the soundfont setting tab.

2016-05-28 0.8.2 alpha
Add option to tweak the OSD. More info shown in the OSD.
Bump version. We have stayed at 0.8.1 for a long time
and the visualization plugin is almost fully functional now.

2016-05-27 0.8.1 alpha
Compute coordinates of pitch-bent notes more precisely.
Also load resources from system-wide folder.

2016-05-26 0.8.1 alpha
Keyboard for 2D visualization.

2016-05-25 0.8.1 alpha
Horizontal 2D visualization.

2016-05-24 0.8.1 alpha
Add seeking with arrow buttons in visualization.
Correct return result of API functions when text encoding is set to Unicode.