@@ -1,3 +1,6 @@
+2017-02-07 0.8.3 alpha
+Fixed 2D visualization broken by commit 8a0d671.
+
 2017-02-01 0.8.3 alpha
 Make packaging qmidiplayer less painful.
 Add mime info.
